--- a/app/views/products/_edit.html.erb
+++ b/app/views/products/_edit.html.erb
@@ -1,5 +1,4 @@
-<p id="notice"><%= notice %></p>
-
+<%= notice_div %>
 <%= render 'thumb' %>
 <div class="product_detail product_addnew">
   <div class="product_info ">
@@ -7,3 +6,4 @@
   </div>
   <%= render :partial => 'form' %>
 </div>
+<%= notice_javascript %>
