--- a/app/views/products/_show.html.erb
+++ b/app/views/products/_show.html.erb
@@ -1,5 +1,4 @@
-<p id="notice"><%= notice %></p>
-
+<%= notice_div %>
 <%= render 'thumb' %>
 
 <div class="product_detail">
@@ -69,3 +68,5 @@
     <%= render 'statistics' %>
   </div>
 </div>
+
+<%= notice_javascript %>
