--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,9 +1,9 @@
 <div class="fullwidth_product"> 
   <div id="product_nav"> 
-    <%= render 'productlist' %>
+    <%= render :partial => 'productlist' %>
   </div>
   <div class="ad_right ad_product_right" id="product_detail">
-    <%= render 'upload' %>
+    <%= render :partial => 'show' %>
   </div>
 </div>
-
+<script>
