--- a/app/views/products/_new.html.erb
+++ b/app/views/products/_new.html.erb
@@ -1,6 +1,8 @@
+<%= notice_div %>
 <div class="product_detail product_addnew">
   <div class="product_info ">
     <h4>新增产品：</h4>
   </div>
   <%= render :partial => 'form' %>
 </div>
+<%= notice_javascript %>
