--- a/app/views/users/forget_password.erb
+++ b/app/views/users/forget_password.erb
@@ -8,6 +8,9 @@
           <li><label>请输入您的登录邮箱</label><%= email_field_tag 'email', @email.blank? ? '' : @email %></li>
           <li><label>验证码</label>
           <%= show_simple_captcha :label => '请输入上面的字符' %>
+          <div class="notice_form">
+            <i class="normal"><%= link_to '看不清楚？换张图片', refresh_captcha_path, :remote => true %></i>
+          </div>
           <li>
           <li><label></label><%= submit_tag '重新设置我的密码', :class => 'btn_green size-max' %>
         <span><%= link_to '返回登录', :back %></span></li>
