--- a/app/views/common/refresh_captcha.js.erb
+++ b/app/views/common/refresh_captcha.js.erb
@@ -1,4 +1,4 @@
-var li = $('.simple_captcha').parent();
+var wrap = $('.simple_captcha').parent();
 $('.simple_captcha').remove();
-li.find('style').remove();
-li.find('label').after("<%= escape_javascript(show_simple_captcha :label => '请输入上面的字符') %>");
+wrap.find('style').remove();
+wrap.append("<%= escape_javascript(show_simple_captcha :label => '请输入上面的字符') %>");
