--- a/app/views/users/signin.html.erb
+++ b/app/views/users/signin.html.erb
@@ -6,8 +6,16 @@
     <div class="box_gray_around login_content">
       <%= form_tag(authenticate_users_path) do %>
         <ul>
-          <li><label>登录邮箱</label><%= email_field_tag 'email', @email.blank? ? '' : @email %></li>
-          <li><label>密 码</label><%= password_field_tag 'password' %></li>
+          <li>
+            <label>登录邮箱</label>
+            <%= email_field_tag 'email', @email.blank? ? '' : @email %>
+            <div class="notice_form"><i class="normal" style=""></i></div>
+          </li>
+          <li>
+            <label>密 码</label>
+            <%= password_field_tag 'password' %>
+            <div class="notice_form"><i class="normal" style=""></i></div>
+          </li>
           <li><label></label><%= submit_tag '登 录', :class => 'btn_green size-max' %><span><%= link_to '忘记密码？', forget_password_users_path %></span></li>
         </ul>
       <% end %>
