--- a/app/views/tagged_images/search.js.erb
+++ b/app/views/tagged_images/search.js.erb
@@ -1,2 +1,2 @@
-$(".publish_left").html("<%= escape_javascript render('tagged_image_list') %>");
+$("#container").html("<%= escape_javascript render('tagged_image_list') %>");
 $(".pagination a").attr("data-remote", "true");
