--- a/app/views/users/signup_ok.html.erb
+++ b/app/views/users/signup_ok.html.erb
@@ -6,7 +6,7 @@
     <dl>
       <dt>没有收到验证邮件？</dt>
       <dd>1. 到广告邮件、垃圾邮件目录里找找看</dd>
-      <dd>2. 真心没收到？<%= link_to '重新发送验证邮件', send_activation_email_users_path + '?email=' + @email %></dd>
+      <dd>2. 真心没收到？<%= link_to '重新发送验证邮件', send_activation_email_users_path %></dd>
       <dd>3. 不小心填错了Email？<%= link_to '再申请一个', signup_users_path %></dd>
     </dl>
   </div>
