--- a/app/views/users/change_password.html.erb
+++ b/app/views/users/change_password.html.erb
@@ -1,10 +1,12 @@
 <div class="fullwidth">  
-  <%= render 'advertisers/quick_link' %>
+  <%#= render 'advertisers/quick_link' %>
   <div class="ad_right">
     <%= notice_div %>
+    <h1>修改密码</h1>
     <div class="data_chart">
       <%= form_tag(update_password_user_path, :id => 'frmChangePwd', :method => :put) do %>
         <ul>
+          <li><label>当 前 账 号</label><%= @user.email %></li>
           <li><label>旧 密 码</label><%= password_field_tag 'old_password' %></li>
           <li><label>新 密 码</label><%= password_field_tag 'new_password' %></li>
           <li><label>确 认 密 码</label><%= password_field_tag 'confirm_password' %></li>
